<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discover Chat</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="action_group">Crear grupo</string>
    <string name="chats">Chats</string>
    <string name="settings">Configuración</string>
    <string name="options">Opciones</string>
    <string name="contacts">Contactos</string>
}    <string name="profile">Perfil</string>
    <string name="myaccount">My Account</string>
    <string name="stats">Stats</string>
    <string name="search">Search</string>
    <string name="discover">Discover</string>
    <string name="message">Chat</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Discover chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="register_do_btn">Registrarse</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_discover">Discover</string>

</resources>
