<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.upb.discoverchat.user.SignUpActivity"
    android:background="@android:color/holo_orange_light">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etxtRegisterEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:hint="@string/hint_email"
        android:text="a@as.co" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etxtRegisterPhone"
        android:layout_below="@+id/etxtRegisterEmail"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_phone"
        android:text="12345667890" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etxtRegisterPasswd"
        android:layout_below="@+id/etxtRegisterPhone"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_password"
        android:text="qqqqqqqqq" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etxtRegisterConfirmPasswd"
        android:layout_below="@+id/etxtRegisterPasswd"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_confirm_password"
        android:text="qqqqqqqqq" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_do_btn"
        android:id="@+id/btnRegisterSend"
        android:layout_below="@+id/etxtRegisterConfirmPasswd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <requestFocus
        android:layout_alignTop="@+id/btnRegisterSend"
        android:layout_centerHorizontal="true" />

    <requestFocus />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
